# ciclad

./: .gitignore  LICENSE  Makefile  README.md  build.sh  ciclad.sln  ciclad.vcxproj  ciclad.vcxproj.filters  ciclad_insert.cpp  ciclad_insert.h  ciclad_main.cpp  ciclad_remove.cpp  ciclad_remove.h  cliclad_insert.cpp  cmdline.h  generic_Transaction.h  hopscotch_hash.h  hopscotch_map.h  isci.cpp  isci.h  main.cpp  run2.cmd  run3.cmd  run5.cmd  streamer.sh  todo.md
CFIStream/: CFIStream.cpp  CFIStream.h  CFIStream.vcxproj  CFIStream.vcxproj.filters  main.cpp
CloStream/: CloStream.cpp  CloStream.h  CloStream.vcxproj  CloStream.vcxproj.filters  main.cpp
CommonUtility/: CommonUtility.vcxproj  CommonUtility.vcxproj.filters  Utility.cpp  Utility.h
Moment/: Moment.vcxproj  Moment.vcxproj.filters  main.cpp  moment.cpp  moment.h
NewMoment/: NewMoment.cpp  NewMoment.h  NewMoment.vcxproj  NewMoment.vcxproj.filters  main.cpp
ciclad_nogen/: Ciclad2019_NoGen.sln  Ciclad2019_NoGen.vcxproj  Ciclad2019_NoGen.vcxproj.filters  Makefile  run_ciclad.bat  run_ciclad.sh
ciclad_v2/: ciclad.vcxproj  ciclad.vcxproj.filters  cmdline.h  hopscotch_growth_policy.h  main.cpp  robin_growth_policy.h  robin_hash.h  robin_map.h  run1.cmd  run4.cmd
ciclad_v3/: CMakeLists.txt  Makefile  ciclad_v3  ciclad_v3.sln  ciclad_v3.vcxproj  ciclad_v3.vcxproj.filters  ciclad_v3_impl.cpp  ciclad_v3_impl.h  ciclad_v3_main.cpp  gitaction.txt  run.cmd  streamer.cpp  test.txt
datasets/: test-a-r-10.txt  testdb_gen2.txt
gnuplot/: README.md  annexe_gctree.dem  ciclad_vs_moment.dem  ciclad_vs_moment_memory.dem  (+9 more)
(+212 files in other folders)
